added final thoughts

--- a/SARIMA.ipynb
+++ b/SARIMA.ipynb
@@ -952,9 +952,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "non_seasonal_order, seasonal_order, seasonl_period =(2, 1, 1), (2, 0, 0), 24\n",
-    "train_exo, train_endo=full_train.drop(['Global_active_power', 'day_sin', 'day_cos'], axis=1), full_train[['Global_active_power']]\n",
-    "test_exo, test_endo=test_df.drop(['Global_active_power', 'day_sin', 'day_cos'], axis=1), test_df[['Global_active_power']]"
+    "non_seasonal_order, seasonal_order, seasonl_period =(2, 1, 1), (2, 0, 0), 24"
    ]
   },
   {
@@ -1092,9 +1090,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 65,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                      SARIMAX Results                                      \n",
+      "===========================================================================================\n",
+      "Dep. Variable:                 Global_active_power   No. Observations:                27645\n",
+      "Model:             SARIMAX(2, 1, 1)x(2, 0, [], 24)   Log Likelihood             -138337.528\n",
+      "Date:                             Wed, 06 Mar 2024   AIC                         276701.056\n",
+      "Time:                                     17:21:38   BIC                         276808.009\n",
+      "Sample:                                 12-17-2006   HQIC                        276735.507\n",
+      "                                      - 02-11-2010                                         \n",
+      "Covariance Type:                               opg                                         \n",
+      "=========================================================================================\n",
+      "                            coef    std err          z      P>|z|      [0.025      0.975]\n",
+      "-----------------------------------------------------------------------------------------\n",
+      "intercept                -0.0014      0.003     -0.430      0.667      -0.008       0.005\n",
+      "Global_reactive_power     0.1238      0.060      2.046      0.041       0.005       0.242\n",
+      "Voltage                  -0.0330      0.002    -15.107      0.000      -0.037      -0.029\n",
+      "Global_intensity          0.1730      0.003     67.432      0.000       0.168       0.178\n",
+      "Sub_metering_1           -0.0214      0.001    -19.156      0.000      -0.024      -0.019\n",
+      "Sub_metering_2           -0.0221      0.001    -22.232      0.000      -0.024      -0.020\n",
+      "Sub_metering_3           -0.0102      0.001    -12.262      0.000      -0.012      -0.009\n",
+      "ar.L1                     0.6189      0.006    111.340      0.000       0.608       0.630\n",
+      "ar.L2                     0.0093      0.006      1.625      0.104      -0.002       0.021\n",
+      "ma.L1                    -0.9896      0.001   -684.707      0.000      -0.992      -0.987\n",
+      "ar.S.L24                 -0.4468      0.009    -48.212      0.000      -0.465      -0.429\n",
+      "ar.S.L48                 -0.1488      0.008    -18.289      0.000      -0.165      -0.133\n",
+      "sigma2                 1486.1875     10.398    142.930      0.000    1465.808    1506.567\n",
+      "===================================================================================\n",
+      "Ljung-Box (L1) (Q):                  19.50   Jarque-Bera (JB):             18724.74\n",
+      "Prob(Q):                              0.00   Prob(JB):                         0.00\n",
+      "Heteroskedasticity (H):               0.75   Skew:                             1.11\n",
+      "Prob(H) (two-sided):                  0.00   Kurtosis:                         6.37\n",
+      "===================================================================================\n",
+      "\n",
+      "Warnings:\n",
+      "[1] Covariance matrix calculated using the outer product of gradients (complex-step).\n"
+     ]
+    }
+   ],
    "source": [
     "model2 = SARIMAX(\n",
     "    endog=new_train_endo,\n",
@@ -1103,7 +1142,54 @@
     "    seasonal_order=(*seasonal_order, seasonl_period),\n",
     "    trend='c'\n",
     ").fit(disp=0)\n",
-    "print(final_model.summary())"
+    "print(model2.summary())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Performamce on test set:\n",
+      "========================\n",
+      "RMSE: 40.278\n",
+      "R2: 0.151\n",
+      "MAE: 30.497\n",
+      "MAPE: 0.784\n"
+     ]
+    }
+   ],
+   "source": [
+    "pred2=model2.get_forecast(steps=len(new_test_exo), exog=new_test_exo).predicted_mean\n",
+    "\n",
+    "print(\"Performamce on test set:\\n========================\")\n",
+    "print(f\"RMSE: {root_mean_squared_error(test_endo, pred2):.3f}\")\n",
+    "print(f\"R2: {r2_score(test_endo, pred2):.3f}\")\n",
+    "print(f\"MAE: {mean_absolute_error(test_endo, pred2):.3f}\")\n",
+    "print(f\"MAPE: {mean_absolute_percentage_error(test_endo, pred2):.3f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Although the assumptions were not met, we made some improvements. We might even get better forecast results if we tune $p, d, q, P, D, \\text{and } Q$ to the new data. One other thing we might do is to refit the model using the observed data (predictors and target) every 24 hours before making a forecast if the computing resources are available. Once again, your expertise and knowledge about the data should inform your decision."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Final Thoughts\n",
+    "\n",
+    "\n",
+    "* SARIMAX is ideal when the future value of the predictors can be easily inferred/predicted.\n",
+    "* In cases where the future value of the predictors cannot be easily inferred/predicted, your expertise and knowledge about the data are needed.\n",
+    "* I suggest comparing different model performances and selecting the best model for your use case."
    ]
   },
   {
