--- a/SARIMA.ipynb
+++ b/SARIMA.ipynb
@@ -1189,7 +1189,10 @@
     "\n",
     "* SARIMAX is ideal when the future value of the predictors can be easily inferred/predicted.\n",
     "* In cases where the future value of the predictors cannot be easily inferred/predicted, your expertise and knowledge about the data are needed.\n",
-    "* I suggest comparing different model performances and selecting the best model for your use case."
+    "* I suggest comparing different model performances and selecting the best model for your use case.\n",
+    "\n",
+    "\n",
+    "Moving forward, we will build ML models and compare our model performace before selecting the best model."
    ]
   },
   {
