added next steps and formatted the markdown

--- a/SARIMA.ipynb
+++ b/SARIMA.ipynb
@@ -1191,6 +1191,7 @@
     "* In cases where the future value of the predictors cannot be easily inferred/predicted, your expertise and knowledge about the data are needed.\n",
     "* I suggest comparing different model performances and selecting the best model for your use case.\n",
     "\n",
+    "## Next Steps\n",
     "\n",
     "Moving forward, we will build ML models and compare our model performace before selecting the best model."
    ]
