--- a/SARIMA.ipynb
+++ b/SARIMA.ipynb
@@ -1200,7 +1200,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Further Reading\n",
+    "## References/Further Reading\n",
     "\n",
     "1. [Time Series Forecasting in Python by Marco Peixeiro](https://www.manning.com/books/time-series-forecasting-in-python-book).\n",
     "2. [Forecasting: Principles and Practice Rob J Hyndman and George Athanasopoulos](https://otexts.com/fpp2/)."
